Closed Bug 149874 Opened 24 years ago Closed 23 years ago

[xlib] Spacebar doesn't toggle checkbox or radio buttons

Categories

(Core :: Layout: Form Controls, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dolivari, Assigned: timeless)

References

Details

Attachments

(1 file)

Go to : resource:///res/samples/test8.html Try to toggle radio buttons, checkbox or buttons only using TAB and SPACE key.
Blocks: 79119
I forgot to precise to use a xlib port of Mozilla
at http://lxr.mozilla.org/mozilla1.0/source/widget/src/xlib/nsKeyCode.cpp#73 the XK code used is XK_KP_Space on my xserver with xev command, I receive XK_space. the patch attached add a line in nsKeyCode.cpp : { NS_VK_SPACE, XK_space},
Attached patch Keycode patchSplinter Review
To blizzard; please take a look at the patch?
Assignee: rods → blizzard
Blocks: 123569
Status: UNCONFIRMED → NEW
Ever confirmed: true
-->
Assignee: blizzard → jkeiser
-> xlib dude.
Assignee: jkeiser → timeless
Attachment #86798 - Flags: review?(timeless)
Attachment #86798 - Flags: superreview+
Comment on attachment 86798 [details] [diff] [review] Keycode patch This fixes the problem. drivers: i'm slowly adding xlib and qt maintenance back into my list of projects, for the most part ii'm only going to be working on showstoppers (crashers, build failures, major things that don't work), the fixes will all be simple and localized to directories which are not part of the normally win/gtk/mac build,
Attachment #86798 - Flags: superreview?(dveditz)
Attachment #86798 - Flags: review?(timeless)
Attachment #86798 - Flags: review+
Attachment #86798 - Flags: approval1.3a?
Attachment #86798 - Flags: superreview?(dveditz)
Comment on attachment 86798 [details] [diff] [review] Keycode patch a=asa for checkin to 1.3a
Attachment #86798 - Flags: approval1.3a? → approval1.3a+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: