Bug 149874 [xlib] Spacebar doesn't toggle checkbox or radio buttons patch by dolivari@eprocess.fr r=timeless sr=bz a=asa